bin_PROGRAMS = linbound

linbound_SOURCES = channel.cpp context.cpp error.cpp event.cpp gui_lb.cpp image.cpp init.cpp main.cpp map.cpp message.cpp network.cpp player.cpp room.cpp server.cpp sound.cpp Sprite.cpp update.cpp xml.cpp

noinst_HEADERS = channel.hpp error.hpp event.hpp gui_lb.hpp image.hpp init.hpp main.hpp map.hpp message.hpp player.hpp protocol.hpp room.hpp server.hpp sound.hpp Sprite.hpp update.hpp xml.hpp
